# thin_shells

./: .gitignore  CMakeLists.txt  CMakeSettings.json  DiscreteShell.cpp  README.md  paper-plane.off  plotvertices.ipynb
assignment6/: CMakeLists.txt
assignment6/data/context-aware/: skeleton.tgf
assignment6/data/cylinder/: pose_target.dmat  skeleton.tgf
assignment6/data/hand/: pose_target.dmat
assignment6/src/: main.cpp
autodiff/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
data/: paper-plane-folded.off  paper-plane-subd.off  paper-plane.off  rectangle.off  rectangle_folded.off  rectangle_upsampled_4.off  twisted.off
data/blend_files/: crumbled paper.blend  crumbled paper.blend1  paperplane_unfolded.blend
data/textures/: discrete_shell_txt.tif  sheet_with_texture.blend  sheet_with_texture.blend1
docs/old_assignements/assignment5_src/src/: Deformation.h  Lasso.h  main.cpp
docs/old_assignements/assignment6/: README.md
docs/old_assignements/assignment6/data/hand/: pose.dmat
docs/old_assignements/assignment6/src/: Deformation.cpp
include/: CMakeLists.txt
src/: DiscreteShell.cpp  DiscreteShell.h  Mesh.cpp  Mesh.h  Solver.cpp  Solver.h  common.h  constants.h  main.cpp  utils.h
